Ecommerce/src/main/java/com/example/ecommerce/errors/ProductNotFoundException.java
package com.example.ecommerce.errors;

public class ProductNotFoundException extends RuntimeException {
    public ProductNotFoundException(String message) {
        super(message);
    }
}
